# Aegis

./: README.md
Aegis Beta v1.0/: Dockerfile  LICENSE  Makefile
Aegis Beta v1.0/backend/: Cargo.toml  build.rs
Aegis Beta v1.0/backend/src/: main.rs
Aegis Beta v1.0/backend/src/api/: handlers.rs  mod.rs  routes.rs  websocket.rs
Aegis Beta v1.0/backend/src/security/: isolation.rs  mod.rs  sandbox.rs  validation.rs
Aegis Beta v1.0/backend/src/storage/: disks.rs  isos.rs  mod.rs
Aegis Beta v1.0/backend/src/utils/: logging.rs  mod.rs  ports.rs
Aegis Beta v1.0/backend/src/vm/: config.rs  mod.rs  networking.rs  qemu.rs
Aegis Beta v1.0/config/: default.toml
Aegis Beta v1.0/frontend/: index.html
Aegis Beta v1.0/frontend/css/: style.css
Aegis Beta v1.0/frontend/js/: api.js  app.js  console.js
Aegis Beta v1.0/scripts/: install-deps.sh  setup.sh
