[package]
name = "vm-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
sysinfo = "0.30"
tungstenite = "0.20"
base64 = "0.21"
tempfile = "3.10"
blake3 = "1.5"
rand = "0.8"
regex = "1.10"
libc = "0.2"
nix = "0.27"
config = "0.13"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
mime = "0.3"
bytes = "1.5"

[build-dependencies]
rustc_version = "0.4"